mdapipkg/objects/Project_Summary__c.object
<CustomObject>
    <description>Project Summary holds summary snap shot information from the Backlog Items for the Salesforce Project Go Live project</description>
    <fields>
        <fullName>Dev_Effort_Sum__c</fullName>
        <label>Dev Effort Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Effort_Text__c</fullName>
        <label>Dev Effort Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count_Sum__c</fullName>
        <label>Record Count Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <label>Sprint Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <label>Status Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Summary</label>
    <nameField>
        <label>Project Burn Down Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>